<resources>
    <string name="app_name">Muses Pad</string>

    <string name="edit_back">返回</string>
    <string name="edit_title">编辑</string>
    <string name="edit_finish">完成</string>
    <string name="filter_name">滤镜名称</string>
    <string name="default_filter_intensity_value">255</string>
    <string name="default_filter_tip">请点击选择滤镜</string>

    <string name="already_finished">已完成</string>
    <string name="take_photo_again">重新拍摄</string>
    <string name="size">尺寸：</string>
    <string name="continue_editing">继续编辑</string>
    <string name="print_now">即刻打印</string>
    <string name="share_now">即刻分享</string>

    <string name="default_notice">欢迎体验 MUSES 风格迁移，请点击相机按钮进行拍照，随后可选择相应风格即可将其应用于所拍摄照片上，滑动滑条即可调整风格强度，祝您生活愉快</string>
    <string name="please_wait_we_are_create_image_now">请稍等，正在为您创建图像</string>
    <string name="please_scan_to_download_image">请扫码获取图片</string>
    <string name="fail_to_get_code">获取二维码图片失败</string>

    <string name="web_address">WEB 服务器地址</string>
    <string name="filter_transfer_address">风格迁移服务器地址</string>
    <string name="confirm_edit">确认修改</string>
    <string name="restore">恢复默认</string>
    <string name="cancel">取消</string>

    <string name="permission_denied">权限授予失败</string>
    <string name="default_web_address">http://muses.deepicecream.com:7010</string>
    <string name="default_filter_address">http://art.deepicecream.com:7004</string>
</resources>
