<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/qb_px_100"
    android:background="@drawable/rectangle_all_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/qb_px_30">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/qb_px_20"
        android:text="@string/web_address"
        android:textColor="@android:color/black"
        android:textSize="@dimen/qb_px_35" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_web_address_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/qb_px_20"
        android:text="@string/filter_transfer_address"
        android:textColor="@android:color/black"
        android:textSize="@dimen/qb_px_35" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_filter_address_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_restore_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_edit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>