<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/edit_background"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="top"
            android:background="@android:color/white"
            android:gravity="center">

            <com.sunfusheng.marqueeview.MarqueeView
                android:id="@+id/mv_notice_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                app:mvAnimDuration="1000"
                app:mvDirection="right_to_left"
                app:mvInterval="3000"
                app:mvSingleLine="true"
                app:mvTextColor="@android:color/black"
                app:mvTextSize="@dimen/sp_12" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_toolbar_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="@dimen/dp_5"
            android:padding="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_toolbar_back_edit"
                style="@style/edit_toolbar_tip_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:text="@string/edit_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_toolbar_title_edit"
                style="@style/edit_toolbar_title_text"
                android:text="@string/edit_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_toolbar_finish_edit"
                style="@style/edit_toolbar_tip_text"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:text="@string/edit_finish" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_content_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_display_edit"
                android:layout_width="@dimen/dp_230"
                android:layout_height="@dimen/dp_230"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_5" />

            <LinearLayout
                android:id="@+id/ll_adjust_container_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/seek_bar_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_filter_tip_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:text="@string/default_filter_tip"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_12"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_filter_intensity_edit"
                    style="@style/edit_filter_intensity_text"
                    android:text="@string/default_filter_intensity_value"
                    android:visibility="gone" />

                <SeekBar
                    android:id="@+id/sb_filter_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:max="255"
                    android:maxHeight="@dimen/dp_10"
                    android:progress="255"
                    android:progressTint="@color/filter_background"
                    android:thumbTint="@color/filter_background"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                android:layout_gravity="bottom"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp_5">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/flab_back_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@android:color/white"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:visibility="gone"
                    app:backgroundTint="@android:color/white" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rlv_filter_class_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rlv_filter_data_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_ad_image_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY" />

    </LinearLayout>


</LinearLayout>
